# next-plaid

./: .dockerignore  .gitignore  404.html  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  SECURITY.md  claude.md  docker-compose.cuda.local.yml  docker-compose.cuda.yml  docker-compose.model.yml  docker-compose.yml  flake.nix  index.html  mkdocs.yml  report.md  sitemap.xml
api/: Cargo.toml  Dockerfile  README.md  docker-entrypoint.sh  index.html
api/documents/: index.html
api/indices/: index.html
api/metadata/: index.html
api/rerank/: index.html
api/search/: index.html
api/src/: error.rs  lib.rs  main.rs  models.rs  state.rs
api/src/handlers/: documents.rs  encode.rs  metadata.rs  mod.rs  search.rs
api/tests/: integration_tests.rs  pyproject.toml  test_api.py  test_concurrent_updates.py
colgrep-mcp/: CONFIG.md  Cargo.toml  PLUGIN_STRUCTURE.md  README.md  antigravity-mcp.json  claude-mcp.json
colgrep-mcp/.claude-plugin/: marketplace.json  plugin.json
colgrep-mcp/docs/: CLOUDFLARE.md  CONFIG.md  IMPLEMENTATION_STATUS.md  PLUGIN_STRUCTURE.md  RESEARCH.md
colgrep-mcp/migrations/: 20260214000001_initial_schema.sql
colgrep-mcp/skill/: SKILL.md
colgrep-mcp/skills/colgrep/: SKILL.md  plugin.json
colgrep-mcp/src/: backend.rs  config.rs  file_watcher.rs  http_handler.rs  main.rs  mcp_server.rs  models.rs  test_ui.html
colgrep-mcp/src/backend/: cloudflare.rs  filesystem.rs  local.rs
colgrep/python-sdk/: .gitignore  Cargo.toml  README.md  pyproject.toml
colgrep/python-sdk/src/: lib.rs
docs/: benchmark_scifact_api.py  benchmark_scifact_api_encoding.py  benchmark_scifact_update.py  benchmark_update.py  build_docs.py  compare_reference.py  compare_scifact.py  configuration.md  contributing.md  evaluate_scifact.py  getting-started.md  index.md  installation.md  model-export.md  onnx_benchmark.py  pyproject.toml  scifact_comparison_results.json  scifact_fastplaid_results.json  scifact_update_comparison.json
docs/api/: documents.md  index.md  indices.md  metadata.md  rerank.md  search.md
docs/benchmarks/: benchmark_fastplaid_compat.py  benchmark_scifact_docker.py  benchmark_scifact_stress.py  benchmark_scifact_stress_one.py  fastplaid_compat_benchmark.json  pyproject.toml  scifact_docker_benchmark.json  scifact_stress_test.json
docs/concepts/: multi-vector.md  plaid.md
docs/deployment/: docker.md  production.md
docs/python-sdk/: async-client.md  client.md  index.md  models.md
docs/stylesheets/: extra.css
next-plaid/: CLAUDE.md  Cargo.toml  README.md  build.rs
next-plaid-browser/: .gitignore  CLAUDE.md  Cargo.toml  README.md  package-lock.json  package.json  tsconfig.json  vitest.config.ts
next-plaid-browser/.cargo/: config.toml
next-plaid-browser/browser-src/effect/: CLAUDE.md  browser-runtime-app.ts  browser-search-runtime.test.ts  browser-search-runtime.ts  browser-worker.ts  client-errors.ts  document-embedding-cache-service.test.ts  document-embedding-cache-service.ts  document-text-digest-service.test.ts  document-text-digest-service.ts  encoder-cache-service.ts  encoder-worker-client-schema.test.ts  encoder-worker-client-schema.ts  encoder-worker-client.test.ts  encoder-worker-client.ts  search-metadata-catalog.ts  search-worker-client.test.ts  search-worker-client.ts  worker-entrypoint.ts  worker-runtime-errors.ts  worker-transport.test.ts  worker-transport.ts
next-plaid-browser/browser-src/model-worker/: effect-timing.test.ts  effect-timing.ts  encoder-contract.test.ts  encoder-contract.ts  encoder-inference-engine.ts  encoder-model-asset-cache.test.ts  encoder-worker.ts  (+21 more)
next-plaid-browser/docs/: ARCHITECTURE.md  BROWSER_RUNTIME_DECISIONS.md  BROWSER_RUNTIME_TRACK_2.md  BROWSER_TESTING.md  REMEDIATION_AUDIT.md  ROADMAP.md  RUST_SQLITE_WASM_SPIKE.md
next-plaid-browser/playwright-harness/: app.mjs  index.html  worker.mjs
next-plaid-browser/runtime/: keyword_engine.mjs
next-plaid-browser/scripts/: browser_demo_server.mjs  build_browser_harness.mjs  check_preprocess_model_parity.mjs  fetch_wiki_corpus.mjs  generate_demo_bundle.py  generate_fixture_encoder_model.py  playwright_harness_common.mjs  playwright_real_model_probe.mjs  playwright_smoke.mjs  prove_rust_sqlite_wasm.sh  prove_tokenizer_wasm.sh  prove_wasm32.sh  test_browser_parity.sh  wasm_env.sh
next-plaid-browser/tests/: keyword_engine.test.mjs
next-plaid-cli/: CLAUDE.md  Cargo.toml  README.md  claude.md  installation.md  report.md
next-plaid-cli/src/: config.rs  embed.rs  lib.rs  main.rs  model.rs  onnx_runtime.rs
next-plaid-hnsw/: Cargo.toml  README.md
next-plaid-hnsw/benches/: hnsw_benchmark.rs
next-plaid-hnsw/examples/: comparison.rs
next-plaid-hnsw/src/: error.rs  hnsw.rs  lib.rs
next-plaid-hnsw/tests/: benchmark_comparison.rs  filtered_search.rs
next-plaid-onnx/: Cargo.toml  PERFORMANCE_ANALYSIS.md  README.md  report.md
next-plaid-onnx/examples/: compare_with_pylate.rs  encode.rs
next-plaid-onnx/python/: README.md  benchmark_comparison.py  benchmark_detailed.py  compare_embeddings.py  compare_rust_pylate.py  export_onnx.py  final_benchmark.py  generate_reference.py  optimization_analysis.py  pyproject.toml  test_pylate_compatibility.py  verify_fix.py
next-plaid-onnx/src/: hierarchy.rs  lib.rs
next-plaid-preprocess/: Cargo.toml
next-plaid-preprocess/src/: config.rs  error.rs  lib.rs  prepare.rs
next-plaid/benches/: plaid_benchmark.rs
next-plaid/examples/: basic.rs  benchmark_cli.rs  cuda_benchmark.rs  scifact_benchmark.rs
next-plaid/src/: codec.rs  cuda.rs  delete.rs  embeddings.rs  error.rs  filtering.rs  index.rs  kmeans.rs  lib.rs  maxsim.rs  mmap.rs  search.rs  strided_tensor.rs  text_search.rs  update.rs  utils.rs
next-plaid/tests/: filtering_integration.rs  fts_integration.rs  index_creation_benchmark.rs  metadata_sync_test.rs  start_from_scratch_env_test.rs
onnx/: Cargo.toml  README.md  build.rs
onnx/python/: README.md  export_onnx.py  generate_reference.py  pyproject.toml  quantize_model.py  requirements.txt  test_pylate_compatibility.py  verify_quantized.py
onnx/src/: lib.rs  main.rs
(+303 files in other folders)
