[workspace]
members = ["next-plaid", "next-plaid-api", "next-plaid-onnx", "next-plaid-hnsw"]
resolver = "2"

[workspace.package]
version = "0.2.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/lightonai/next-plaid"
homepage = "https://github.com/lightonai/next-plaid"
authors = ["Raphael Sourty, LightOn <contact@lighton.ai>"]
documentation = "https://docs.rs/next-plaid"

[workspace.dependencies]
ndarray = { version = "0.16", features = ["rayon"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
anyhow = "1.0"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3

[profile.bench]
lto = true
codegen-units = 1
opt-level = 3
