[package]
name = "lategrep-api"
version = "0.1.0"
edition = "2021"
description = "REST API for lategrep multi-vector search"
license = "Apache-2.0"

[dependencies]
# Core lategrep library
lategrep = { path = "..", features = ["npy", "filtering"] }

# Web framework
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1.0", features = ["full"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["cors", "trace", "timeout"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Arrays
ndarray = { version = "0.16", features = ["serde"] }

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
uuid = { version = "1.0", features = ["v4", "serde"] }
parking_lot = "0.12"
base64 = "0.22"

# OpenAPI / Swagger
utoipa = { version = "5", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "8", features = ["axum"] }

[dev-dependencies]
reqwest = { version = "0.12", features = ["json"] }
ndarray-rand = "0.15"
tempfile = "3.15"
rand = "0.8"

[[bin]]
name = "lategrep-api"
path = "src/main.rs"
