[workspace]
members = [
    "crates/next-plaid-browser-contract",
    "crates/next-plaid-browser-kernel",
    "crates/next-plaid-browser-loader",
    "crates/next-plaid-browser-wasm",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "Apache-2.0"
version = "0.1.0"
authors = ["Pooks + Codex"]

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
thiserror = "2.0"
wasm-bindgen = "0.2.105"
wasm-bindgen-test = "0.3.55"

[profile.release]
lto = true
codegen-units = 1
opt-level = "s"
