[package]
name = "next-plaid-cli"
version.workspace = true
edition = "2021"
description = "Semantic code search powered by ColBERT"
license = "MIT"
repository = "https://github.com/lightonai/next-plaid"
homepage = "https://github.com/lightonai/next-plaid"

[package.metadata.dist]
dist = true

[[bin]]
name = "plaid"
path = "src/main.rs"

[dependencies]
# === Core: your crates ===
next-plaid = { path = "../next-plaid", version = "0.2.2" }
next-plaid-onnx = { path = "../next-plaid-onnx", version = "0.2.2" }

# === Tree-sitter for parsing ===
tree-sitter = "0.24"
# Original languages
tree-sitter-python = "0.23"
tree-sitter-typescript = "0.23"
tree-sitter-javascript = "0.23"
tree-sitter-go = "0.23"
tree-sitter-rust = "0.23"
tree-sitter-java = "0.23"
tree-sitter-c = "0.23"
tree-sitter-cpp = "0.23"
tree-sitter-ruby = "0.23"
tree-sitter-c-sharp = "0.23"
# Additional languages
tree-sitter-kotlin-ng = "1.1"
tree-sitter-swift = "0.6"
tree-sitter-scala = "0.23"
tree-sitter-php = "0.23"
tree-sitter-lua = "0.2"
tree-sitter-elixir = "0.3"
tree-sitter-haskell = "0.23"
tree-sitter-ocaml = "0.23"

# === Model download ===
hf-hub = "0.4"

# === ONNX Runtime setup ===
ureq = "2"
flate2 = "1"
tar = "0.4"
dirs = "5"

# === CLI ===
clap = { version = "4", features = ["derive"] }
colored = "2"
indicatif = "0.17"

# === Serialization ===
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# === Error handling ===
anyhow = "1"
thiserror = "1"

# === Parallelism ===
rayon = "1.8"

# === File handling ===
walkdir = "2"
ignore = "0.4"
globset = "0.4"

# === Hashing ===
xxhash-rust = { version = "0.8", features = ["xxh3"] }

# === Ndarray (for embeddings) ===
ndarray = "0.16"

[dev-dependencies]
tempfile = "3"

[features]
default = []
cuda = ["next-plaid-onnx/cuda"]
coreml = ["next-plaid-onnx/coreml"]

[target.'cfg(windows)'.dependencies]
zip = "2"
