[project]
name = "lategrep-api-tests"
version = "0.1.0"
description = "Integration tests for the Lategrep REST API"
requires-python = ">=3.9"
dependencies = [
    "requests>=2.28.0",
    "numpy>=1.20.0",
    "pytest>=7.0.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.8.0",
]

[tool.pytest.ini_options]
testpaths = ["."]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]
