[package]
name = "colgrep-parser"
version = "0.1.0"
edition = "2021"
description = "Python bindings for colgrep code parser"
license = "MIT"
repository = "https://github.com/lightonai/next-plaid"

# Exclude from parent workspace
[workspace]

[lib]
name = "colgrep_parser"
crate-type = ["cdylib"]

[dependencies]
# PyO3 for Python bindings
pyo3 = { version = "0.22", features = ["extension-module"] }

# Tree-sitter for parsing
tree-sitter = "0.25"
tree-sitter-python = "0.25"
tree-sitter-typescript = "0.23"
tree-sitter-javascript = "0.25"
tree-sitter-go = "0.25"
tree-sitter-rust = "0.24"
tree-sitter-java = "0.23"
tree-sitter-c = "0.24"
tree-sitter-cpp = "0.23"
tree-sitter-ruby = "0.23"
tree-sitter-c-sharp = "0.23"
tree-sitter-kotlin-ng = "1.1"
tree-sitter-swift = "0.7"
tree-sitter-scala = "0.23"
tree-sitter-php = "0.24"
tree-sitter-lua = "0.4"
tree-sitter-elixir = "0.3"
tree-sitter-haskell = "0.23"
tree-sitter-ocaml = "0.23"
tree-sitter-r = "1.2"
tree-sitter-zig = "1.1"
tree-sitter-julia = "0.23"
tree-sitter-sequel = "0.3"
tree-sitter-html = "0.23"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
