[project]
name = "onnx-colbert"
version = "0.1.0"
description = "ONNX export and benchmarking tools for ColBERT models"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pylate>=1.3.3",
    "torch>=2.6.0,<=2.8.0",
    "transformers>=4.30.0",
    "safetensors>=0.4.0",
    "onnx>=1.14.0",
    "onnxruntime>=1.16.0",
    "numpy>=1.24.0",
    "huggingface-hub>=0.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "ruff>=0.1.0",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["."]
python_files = ["test_*.py"]
