[package]
name = "next-plaid-browser-storage"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
next-plaid-browser-contract = { path = "../next-plaid-browser-contract" }
next-plaid-browser-loader = { path = "../next-plaid-browser-loader" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = "0.3.82"
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }
web-sys = { version = "0.3.82", features = [
  "DomException",
  "Event",
  "EventTarget",
  "IdbDatabase",
  "IdbFactory",
  "IdbObjectStore",
  "IdbOpenDbRequest",
  "IdbRequest",
  "IdbTransaction",
  "IdbTransactionMode"
] }
