[package]
name = "next-plaid-browser-wasm"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
base64 = { workspace = true }
next-plaid-browser-contract = { path = "../next-plaid-browser-contract" }
next-plaid-browser-kernel = { path = "../next-plaid-browser-kernel" }
serde_json = { workspace = true }
wasm-bindgen = { workspace = true }

[dev-dependencies]
wasm-bindgen-test = { workspace = true }
