[package]
name = "spike-tokenizer-wasm"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
console_error_panic_hook = "0.1"
serde = { workspace = true }
serde_json = { workspace = true }
tokenizers = { version = "=0.21.1", default-features = false, features = ["unstable_wasm"] }
wasm-bindgen = { workspace = true }

[dev-dependencies]
wasm-bindgen-test = { workspace = true }

[lints]
workspace = true

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
